--- a/src/css/form.css
+++ b/src/css/form.css
@@ -34,12 +34,12 @@
 }
 
 .form .input-wrapper input{
-	background: var(--darkDark-2);
-	border:solid var(--darkGreen) 2px;
+	background: var(--color-back-4);
+	border:solid var(--color-secondary) 2px;
 	border-radius:10px;
 	box-shadow:0px 1px 10px black;
 	font-size:15px;
-	color:var(--darkClear-1);
+	color:var(--color-primary);
 	padding:5px;
 	width: 60%;
 	outline:none;
@@ -56,7 +56,7 @@
 }
 
  .form .input-wrapper input::placeholder{
- 	color:var(--darkClear-1);
+ 	color:var(--color-primary);
  	transition:1s;
  }
 
@@ -67,9 +67,9 @@
 }
 
 .form .input-wrapper button{
-	background:var(--darkGreen);
+	background:var(--color-secondary);
 	padding:10px 30px;
-	border:outset 3px var(--darkGreen);
+	border:outset 3px var(--color-secondary);
 	border-radius:20px;
 	margin:auto;
 	font-weight: bolder;
@@ -79,7 +79,7 @@
 
 .form .input-wrapper button:active{
 	background: #217C50;
-	border:inset 3px var(--darkGreen);
+	border:inset 3px var(--color-secondary);
 	color:lightgrey;
 }
 
