--- a/src/css/room.css
+++ b/src/css/room.css
@@ -12,7 +12,7 @@
 
 .sidebar{
 	flex:25;
-	background: var(--darkBack-2);
+	background: var(--color-back-2);
 	display:flex;
 	flex-direction: column;
 	align-items: center;
@@ -34,9 +34,9 @@
 
 .sidebar form input{
 	padding:3px;
-	background: var(--darkDark-2);
+	background: var(--color-back-4);
 	border-radius: 10px;
-	border:inset var(--darkGreen) 2px;
+	border:inset var(--color-secondary) 2px;
 	outline:none;
 }
 
@@ -47,13 +47,13 @@
 }
 
 .sidebar form input::placeholder{
- 	color:var(--darkClear-1);
+ 	color:var(--color-primary);
  	transition:1s;
  }
 
 .sidebar form button{
 	background: transparent;
-	color:var(--darkClear-1);
+	color:var(--color-primary);
 	border:none;
 	outline: none;
 }
@@ -66,9 +66,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
- 	background: var(--darkDark-1);
+ 	background: var(--color-back-3);
  	height: calc(100vh - 100px);
- 	border:inset var(--darkGreen) 3px;
+ 	border:inset var(--color-secondary) 3px;
  	border-radius: 20px 10px 10px 20px;
  	width: 90%;
  	overflow-y: scroll;
