--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1,59 +1,3 @@
-@media screen and (max-width: 600px){
-
-	.navbar{
-		flex-direction: row-reverse;
-	}
-
-	.navbar .navbar-ul{
-		display: none;
-	}
-
-	.navbar .navbar-ul-toggled{
-		display: flex;
-	}
-
-	.navbar #dropdown{
-		display: block;
-		background:var(--color-back-3);
-		color:var(--color-primary);
-	}
-
-	.navbar #dropdown-toggled{
-		background:var(--color-primary);
-		color:var(--color-back-3);
-		width: 20px;
-	}
-
-	.sidebar{
-		padding-top: 130px;
-		position: absolute;
-		transition: 1s;
-		transform: translateX(-500px);
-	}
-
-	#sidebar-toggle{
-		transition:2s;
-		transform: translateX(0px);
-	}
-
-	.main{
-		padding-top: 50px;
-	}
-}
-
-@media screen and (max-width: 400px){
-	.form .input-wrapper{
-		display: flex;
-		flex-direction: column-reverse;
-		align-items: flex-start;
-	}
-
-	.form .input-wrapper input{
-		margin-top:20px;
-		width: 100%;
-	}
-
-}
 
 *{
 	margin:0px;
@@ -61,12 +5,6 @@
 }
 
 :root {
-  --color-secondary:#51BD8A;
-  --color-primary: #C2CBEA;
-  --color-back-1:#3E485F;
-  --color-back-2:#022A3F;
-  --color-back-3: #0C152B;
-  --color-back-4:#115268;
   --wLarge:900px;
   --wMid:600px;
   --wSmall:300px;
@@ -76,6 +14,20 @@ body{
 	background:var(--color-back-1);
 	color:var(--color-primary);
 	font-family: 'Quicksand', sans-serif;
+}
+
+button{
+	background:var(--color-secondary);
+	border:outset 3px var(--color-secondary);
+	border-radius:20px;
+	font-weight: bolder;
+	color:var(--color-primary);
+	outline: none;
+}
+
+button:active{
+	background: var(--color-primary);;
+	border:inset 3px var(--color-secondary);
 }
 
 a:link, a:visited, li{
@@ -104,11 +56,14 @@ a:link, a:visited, li{
 	padding:20px 50px;
 	border:solid var(--color-secondary) 2px;
 	border-radius: 20px;
-	margin:0px 0px 20px 0px;
 }
 
 .app-message-text{
 	font-size: 20px;
+}
+
+.dropdown{
+	position:absolute;
 }
 
 .popupWindow-blur{
@@ -118,7 +73,7 @@ a:link, a:visited, li{
 	width:100%;
 	height: 100%;
 	z-index: 200;
-	background: rgba(100,100,100,0.5);
+	background: rgba(0,0,0,0.5);
 	filter:blur(20px);
 	-webkit-filter:blur(20px);
 }
@@ -133,5 +88,28 @@ a:link, a:visited, li{
 	border:solid var(--color-secondary) 5px;
 	border-radius: 10px;
 	z-index: 300;
+}
+
+.popupClose{
+	width:25px;
+	height: 25px;
+	position: absolute;
+	top:-12.5px;
+	right:-12.5px;
+	background: var(--color-back-3);
+	color:var(--color-secondary);
+	border:solid var(--color-secondary) 3px;
+	border-radius: 50%;
+	outline:none;
+}
+
+.popupClose:hover{
+	background: var(--color-secondary);
+	color:var(--color-back-3);
+}
+
+.popupClose:active{
+	background: var(--color-back-2);
+	color:var(--color-secondary);
 }
 
