--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -34,3 +34,23 @@
 .navbar #dropdown{
 	display: none;
 }
+
+.navbar .dropdown,.navbar .dropdown:hover{
+	transform: translate(-68px,20px);
+	background: var(--color-back-3);
+	border-radius: 0px 0px 10px 10px;
+	max-height: 60vh;
+	overflow-y: scroll;
+}
+
+.navbar .dropdown-li{
+	padding: 10px;
+}
+
+.navbar .dropdown-li button{
+	font-size:10px;
+}
+
+.navbar .user>*{
+	margin:0px 3px;
+}
