--- a/client/src/css/room.css
+++ b/client/src/css/room.css
@@ -52,13 +52,26 @@
 
 .sidebar{
 	flex:25;
-	background: var(--color-back-2);
 	display:flex;
+	position:relative;
+	background: var(--color-back-2);
 	flex-direction: column;
 	align-items: center;
 	padding:90px 10px 10px 10px;
 	height: calc(100vh - 70px);
 	border-right:solid var(--color-back-2) 1px;
+}
+
+.sidebar .toggle-btn{
+	background: var(--color-back-2);
+	border:var(--color-back-2);
+	border-radius: 1px;
+	padding: 10px;
+	position: absolute;
+	right:-30px;
+	top:60px;
+	font-size:110%;
+	display: none;
 }
 
 .sidebar form{
